fixed the duplicate document upload error